--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -16,8 +16,11 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 executable frontend
+  ghc-options:         -Wall
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Component.Subscription
+                     , Model.Subscription
+                     , Data.Zipper
   -- other-extensions:
   build-depends:       base >=4.11 && <4.12
                      , miso
@@ -25,5 +28,7 @@ executable frontend
                      , mtl
                      , lens
                      , generic-lens
+                     , comonad
+                     , free
   hs-source-dirs:      src
   default-language:    Haskell2010
