--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -18,7 +18,14 @@ extra-source-files:  CHANGELOG.md
 library
   -- exposed-modules:
   -- other-modules:
-  -- other-extensions:
+  other-extensions:    NoImplicitPrelude
   build-depends:       base >=4.11 && <4.12
+                     , feed
+                     , stm
+                     , async
+                     , mtl
+                     , text
+                     , bytestring
+                     , common
   hs-source-dirs:      src
   default-language:    Haskell2010
