--- a/frontend/frontend.cabal
+++ b/frontend/frontend.cabal
@@ -30,5 +30,6 @@ executable frontend
                      , generic-lens
                      , comonad
                      , free
+                     , common
   hs-source-dirs:      src
   default-language:    Haskell2010
