--- a/common/common.cabal
+++ b/common/common.cabal
@@ -21,5 +21,9 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.11 && <4.12
+                     , mtl
+                     , transformers
+                     , text
+                     , bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
