--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -17,8 +17,9 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- exposed-modules:
-  -- other-modules:
-  other-extensions:    NoImplicitPrelude
+  other-modules:       HBoat.Control.Feed
+  -- other-extensions:
+  extensions:          NoImplicitPrelude
   build-depends:       base >=4.11 && <4.12
                      , feed
                      , stm
