--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -18,8 +18,15 @@ extra-source-files:  CHANGELOG.md
 library
   -- exposed-modules:
   other-modules:       HBoat.Control.Feed
+                     , HBoat.Data.Zipper
   -- other-extensions:
   extensions:          NoImplicitPrelude
+                     , TypeApplications
+                     , OverloadedStrings
+                     , DeriveGeneric
+                     , DeriveFunctor
+                     , RecordWildCards
+                     , LambdaCase
   build-depends:       base >=4.11 && <4.12
                      , feed
                      , stm
@@ -28,5 +35,19 @@ library
                      , text
                      , bytestring
                      , common
+                     , comonad
+                     , adjunctions
+                     , distributive
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite spec
+  type:                exitcode-stdio-1.0
+  main-is:             Spec.hs
+  hs-source-dirs:      test
+  build-depends:       base >=4.11 && <4.12
+                     , backend
+                     , common
+                     , hspec
+                     , genvalidity
+                     , genvalidity-hspec
