--- a/backend/backend.cabal
+++ b/backend/backend.cabal
@@ -17,7 +17,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   -- exposed-modules:
-  other-modules:       HBoat.Control.Feed
+  exposed-modules:     HBoat.Control.Feed
                      , HBoat.Data.Zipper
   -- other-extensions:
   extensions:          NoImplicitPrelude
@@ -38,12 +38,14 @@ library
                      , comonad
                      , adjunctions
                      , distributive
+                     , genvalidity
   hs-source-dirs:      src
   default-language:    Haskell2010
 
 test-suite spec
   type:                exitcode-stdio-1.0
   main-is:             Spec.hs
+  other-modules:       Test.Data.Zipper
   hs-source-dirs:      test
   build-depends:       base >=4.11 && <4.12
                      , backend
