More prelude stuff

--- a/common/common.cabal
+++ b/common/common.cabal
@@ -25,5 +25,6 @@ library
                      , transformers
                      , text
                      , bytestring
+                     , directory
   hs-source-dirs:      src
   default-language:    Haskell2010
