--- a/common/common.cabal
+++ b/common/common.cabal
@@ -26,5 +26,6 @@ library
                      , text
                      , bytestring
                      , directory
+                     , time
   hs-source-dirs:      src
   default-language:    Haskell2010
